--- a/deps.toml
+++ b/deps.toml
@@ -32,7 +32,7 @@ reactor = "3.5.2"
 segment = "2.1.1"
 slf4j = "2.0.7"
 temporal = "1.19.1"
-debezium = "2.2.0.Final"
+debezium = "2.3.2.Final"
 
 [libraries]
 airbyte-protocol = { module = "io.airbyte.airbyte-protocol:protocol-models", version.ref = "airbyte-protocol" }
@@ -41,6 +41,7 @@ apache-commons-lang = { module = "org.apache.commons:commons-lang3", version = "
 appender-log4j2 = { module = "com.therealvan:appender-log4j2", version = "4.1.0" }
 assertj-core = { module = "org.assertj:assertj-core", version = "3.21.0" }
 aws-java-sdk-s3 = { module = "com.amazonaws:aws-java-sdk-s3", version = "1.12.472" }
+bouncy-castle = { module = "org.bouncycastle:bcprov-jdk15on", version = "1.70" }
 commons-io = { module = "commons-io:commons-io", version.ref = "commons_io" }
 connectors-destination-testcontainers-clickhouse = { module = "org.testcontainers:clickhouse", version.ref = "connectors-destination-testcontainers-clickhouse" }
 connectors-destination-testcontainers-oracle-xe = { module = "org.testcontainers:oracle-xe", version.ref = "connectors-destination-testcontainers-oracle-xe" }
@@ -68,7 +69,7 @@ findsecbugs-plugin = { module = "com.h3xstream.findsecbugs:findsecbugs-plugin", 
 flyway-core = { module = "org.flywaydb:flyway-core", version.ref = "flyway" }
 glassfish = { module = "org.glassfish.jersey:jackson-bom", version.ref = "glassfish_version" }
 google-cloud-storage = { module = "com.google.cloud:google-cloud-storage", version = "2.17.2" }
-guava = { module = "com.google.guava:guava", version = "31.1-jre" }
+guava = { module = "com.google.guava:guava", version = "32.1.2-jre" }
 hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikaricp" }
 jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "fasterxml_version" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "fasterxml_version" }
