--- a/airbyte-integrations/connectors/source-salesforce/Dockerfile
+++ b/airbyte-integrations/connectors/source-salesforce/Dockerfile
@@ -39,6 +39,14 @@ RUN pip uninstall setuptools -y && \
 ENV TZ UTC
 RUN cp /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
+# cleanup pip/setuptools in both environments
+RUN pip uninstall setuptools -y &&\
+    PATH=$ROOTPATH pip uninstall setuptools -y &&\
+    pip uninstall pip -y &&\
+    PATH=$ROOTPATH pip uninstall pip -y &&\
+    rm -rf /usr/local/lib/python3.10/ensurepip &&\
+    apk --purge del apk-tools py-pip
+
 ENTRYPOINT ["python", "/airbyte/integration_code/main.py"]
 
 LABEL io.airbyte.version=2.0.12
